2010-05-20  Ramon Novoa  <rnovoa@artica.es>

	* unix/DEBIAN/control, unix/DEBIAN/make_deb_package.sh: Renamed
	  deb package.

2010-05-20  Ramon Novoa  <rnovoa@artica.es>

	* unix/pandora_agent: Updated agent version.

2010-05-20  Sergio Martin <sergio.martin@artica.es>

	* unix/Linux/pandora_agent.conf: Improved the
	agent modules memused and proctotal

2010-05-20  Ramon Novoa  <rnovoa@artica.es>

	* unix/pandora_agent: Updated agent version.

2010-05-20  Ramon Novoa  <rnovoa@artica.es>

	* unix/pandora_agent_installer, unix/DEBIAN/control,
	  unix/DEBIAN/make_deb_package.sh, unix/pandora_agent.spec,
	  unix/pandora_agent, linux/DEBIAN/make_deb_package.sh,
	  linux/pandora_agent.spec: Updated for the release of Pandora FMS 3.1 RC1.

2010-05-20  Miguel de Dios  <miguel.dedios@artica.es>

	* DEBIAN/make_deb_package.sh: fixed the permissions to DEBIAN temp package. 

2010-05-18  Sancho Lerena <slerena@artica.es>

	* unix/pandora_agent_installer: New version of installer. Now allow
	to install the agent and all its dependencies, configuration and logfiles 
	inside a specific directory, for example: /opt/pandora. That directory
	will contain all data, even the logs. Default configuration file and 
	launcher daemon script are modified in realtime to have that custom
	defined directory. Removed "with-links" method.

	* *.conf: Minor modification to use the new method of install in a custom
	directory.

	* unix/pandora_agent_daemon: Build update and some small modifications
	to use the custom directory.

2010-05-17  Sergio Martin <sergio.martin@artica.es>

	* linux/pandora_agent.conf: Improved the default
	modules memused and proctotal for bug 3002626

2010-05-16  Raúl Mateos  <raulofpandora@gmail.com>

	* linux/pandora_agent_installer, linux/DEBIAN/make_deb_package.sh,
	linux/DEBIAN/control, linux/pandora_agent, linux/pandora_agent_daemon,
	linux/pandora_agent.conf: Updated build. Updated year.

2010-05-12  Sergio Martin <sergio.martin@artica.es>
