@@ -1,1 +1,2 @@
 /etc/pandora/pandora_agent.conf
+/etc/pandora/plugins
