@@ -1,3 +1,12 @@
+2010-06-01  Miguel de Dios  <miguel.dedios@artica.es>
+
+	* unix/DEBIAN/prerm: disabled the erase conf file and plugin dir.
+	
+	* unix/DEBIAN/conffiles: added plugin directory.
+	
+	* unix/DEBIAN/make_deb_package.sh: cleaned source code, and now make the
+	plugin empty dir for package builder.
+
 2010-05-20  Ramon Novoa  <rnovoa@artica.es>
 
 	* unix/DEBIAN/control, unix/DEBIAN/make_deb_package.sh: Renamed
